fix: align bff and orders with database schema