@@ -1,6 +1,9 @@
 package cl.duoc.pedidos360.bff.config.security;
 
 import java.util.List;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.stream.Collectors;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -10,6 +13,11 @@ import org.springframework.security.config.annotation.method.configuration.Enabl
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.core.convert.converter.Converter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -18,51 +26,54 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @EnableMethodSecurity
 public class SecurityConfig {
 
-    @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-	http
-		.cors(Customizer.withDefaults())
-		.csrf(csrf -> csrf.disable())
-		.sessionManagement(session -> session
-			.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-		.authorizeHttpRequests(auth -> auth
-			.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-			.requestMatchers("/api/publico").permitAll()
-			.requestMatchers("/api/catalog/**").authenticated()
-			.requestMatchers("/api/orders/**").authenticated()
-			.anyRequest().authenticated())
-		.oauth2ResourceServer(oauth -> oauth.jwt(jwt -&gt; jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())) );
+	@Bean
+	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+		http
+				.cors(Customizer.withDefaults())
+				.csrf(csrf -> csrf.disable())
+				.sessionManagement(session -> session
+						.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+				.authorizeHttpRequests(auth -> auth
+						.requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+						.requestMatchers("/api/publico").permitAll()
+						.requestMatchers("/api/catalog/**").authenticated()
+						.requestMatchers("/api/orders/**").authenticated()
+						.anyRequest().authenticated())
+				.oauth2ResourceServer(
+						oauth -> oauth.jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
 
-	return http.build();
-    }
+		return http.build();
+	}
 
 	private JwtAuthenticationConverter jwtAuthenticationConverter() {
-    JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-    converter.setJwtGrantedAuthoritiesConverter(new Converter<Jwt, Collection<GrantedAuthority>>() {
-        @Override
-        public Collection<GrantedAuthority> convert(Jwt jwt) {
-            List<String> roles = jwt.getClaimAsStringList("roles");
-            if (roles == null || roles.isEmpty()) {
-                return Collections.emptyList();
-            }
-            return roles.stream()
-                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                    .collect(Collectors.toList());
-        }
-    });
-    return converter;
-}
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-	CorsConfiguration config = new CorsConfiguration();
-	config.setAllowedOriginPatterns(List.of(
-		"http://localhost:4200",
-		"https://*.amazonaws.com"));
-	config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-	config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+		JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+		converter.setJwtGrantedAuthoritiesConverter(new Converter<Jwt, Collection<GrantedAuthority>>() {
+			@Override
+			public Collection<GrantedAuthority> convert(Jwt jwt) {
+				List<String> roles = jwt.getClaimAsStringList("roles");
+				if (roles == null || roles.isEmpty()) {
+					return Collections.emptyList();
+				}
+				return roles.stream()
+						.map(role -> new SimpleGrantedAuthority(
+								role.startsWith("ROLE_") ? role : "ROLE_" + role))
+						.collect(Collectors.toList());
+			}
+		});
+		return converter;
+	}
 
-	UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-	source.registerCorsConfiguration("/**", config);
-	return source;
-    }
+	@Bean
+	public CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration config = new CorsConfiguration();
+		config.setAllowedOriginPatterns(List.of(
+				"http://localhost:4200",
+				"https://*.amazonaws.com"));
+		config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+		config.setAllowedHeaders(List.of("Authorization", "Content-Type"));
+
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", config);
+		return source;
+	}
 }
